2009-05-20  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#117109 - Contact list background visible in portrait mode

	* src/util/hd-util.c: Update blur state after the screen rotation in
	order to make sure that the windows that were blurred previously are
	still blurred. In this case the background will be white during the 
	screen rotation transition unless clutter >= 0.8.2-0maemo32 is used.
	The new clutter will also fix the white rects during screen rotation
	issue.

2009-05-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait): Stop going
	through the stack after a window covering the whole screen was
	encountered. This fixes a bogus rotation from portrait to landscape
	when e.g. Calculator is behind Call UI and you open the dialpad.

2009-05-20  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/home/hd-title-bar.c: Added a static function to determine
	whether the status area is visible, since it can be hidden in
	many ways.  Partial fix for NB#116866.

2009-05-20  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home-view.c: Modified parallax applet panning method to
	  something that looks a lot better.

2009-05-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.49

2009-05-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#103823 - Unable to restore home applets from backup and
	restore application.

	* src/Makefile.am:
	* src/hildon-desktop.prebackup.sh (added): Add prebackup script which
	copies the system plugins config to user config if that not exist yet.

2009-05-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Apply patch from Alejandro Pineiro for NB#110763.
	* src/a11y/hildon-desktop-a11y.c: Load a11y support as modules if
	available.

	* src/mb/hd-app.c (delete_open_menus): New. Close menus when new
	application appears. This is in preparation for fixing NB#116326.

2009-05-15  Laszlo Pere  <lpere@blumsoft.eu>
