@@ -776,7 +776,9 @@ hd_title_bar_set_window(HdTitleBar *bar, MBWindowManagerClient *client)
         }
     }
 
-  if (!decor)
+  if (!decor ||
+      (client && client->window &&
+       (client->window->ewmh_state & MBWMClientWindowEWMHStateFullscreen)))
     {
       HdTitleBarVisEnum state;
       /* No north decor found, or no client */
@@ -787,8 +789,17 @@ hd_title_bar_set_window(HdTitleBar *bar, MBWindowManagerClient *client)
         /* in Home edit mode we can have back button */
 	state = hd_title_bar_get_state(bar) & ~HDTB_VIS_FULL_WIDTH;
       else
-	state = hd_title_bar_get_state(bar) & ~(HDTB_VIS_FULL_WIDTH |
-			         HDTB_VIS_BTN_CLOSE | HDTB_VIS_BTN_BACK);
+	{
+	  state = hd_title_bar_get_state(bar) & ~(HDTB_VIS_FULL_WIDTH |
+						  HDTB_VIS_BTN_CLOSE | HDTB_VIS_BTN_BACK);
+
+	  /* We only want to hide the switcher if there's a client, since
+	   * it must be a fullscreen client.
+	   */
+	  if (client)
+	    state &= ~HDTB_VIS_BTN_SWITCHER;
+	}
+
       hd_title_bar_set_state(bar, state);
       return;
     }
