@@ -1,3 +1,11 @@
+2009-05-20  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+	* src/home/hd-title-bar.c:  Treat fullscreen windows as though
+	they had no decor for the purposes of figuring out button
+	visibility.  Also, hide the switcher button if we're dealing
+	with an ordinary client (rather than, say, the desktop).
+	Fixes NB#116866.
+
 2009-05-20  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Fixes: NB#117109 - Contact list background visible in portrait mode
